app/assets/stylesheets/messages.css.scss
// Place all the styles related to the Messages controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.container.guestbook {

  h1 {
    text-align: center;
  }

  .new-message {
    margin-top: 20px;
    text-align: center;
  }

  .save-button {
    text-align: center;
  }

  .back-button {
    text-align: right;
  }

  .oversize {
    font-size: 130%;
  }

  .new-message {
    margin-bottom: 20px;
  }

  .thumbnail {
    height: 200px;
  }

  .thumbnail:hover {
    height: 300px;
  }
  
}

